Fixes two plus column dropdowns from jumping down to one column caused by each column being larger than half of its container

--- a/style.css
+++ b/style.css
@@ -2216,7 +2216,7 @@ h5.home_date {
     }
 
     .nav-collapse .dropdown-menu.twocolumn {
-        width: 482px;
+        width: 423px;
         left: -80px;
     }
     
@@ -2226,7 +2226,7 @@ h5.home_date {
     }
 
     .menu-block {
-        width: 241px;
+        width: 210px;
         float: left;
         height: auto;
         display: block;
